[package]
name = "json2ts"
version = "0.1.0"
edition = "2021"
authors = ["Louis Andrew <louisandrew3@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/LouisAndrew/json2ts"
repository = "https://github.com/LouisAndrew/json2ts"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"

[[bin]]
name = "json2ts"
path = "src/main.rs"